--- a/BitmapGrid/.project
+++ b/BitmapGrid/.project
@@ -15,4 +15,11 @@
 		<nature>com.adobe.flexbuilder.project.flexlibnature</nature>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>bin-debug</name>
+			<type>2</type>
+			<locationURI>DOCUMENTS/FishTank/flexLibs</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
